--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,1 +1,7 @@
-v0.1, 12 May 2013 -- Initial release.
+v0.1.1, 2012-05-12
+
+* Fix non-enforcement of one-way exits
+
+v0.1.0, 2012-05-12
+
+* Initial release
