--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
+v1.0.1, 2012-05-24
+
+* Add Pylint and PEP8 conformance
+
 v1.0.0, 2012-05-18
 
 * Fix project name!
+* Non-API classes and functions prepended with underscores to 'hide' them
 
 v0.1.1, 2012-05-12
 
