--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,8 @@
-v1.0.1, 2012-05-24
+v1.0.1, 2012-05-28
 
+* Add input validation to vengeance.run_game(game_data)
 * Add Pylint and PEP8 conformance
+* Add documentation generation with Sphinx
 
 v1.0.0, 2012-05-18
 
