--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,18 +1,22 @@
-v1.0.1, 2012-05-28
+v1.1.0, 2013-06-xx
+
+* Correct release years in CHANGES.txt
+
+v1.0.1, 2013-05-28
 
 * Add input validation to vengeance.run_game(game_data)
 * Add Pylint and PEP8 conformance
 * Add documentation generation with Sphinx
 
-v1.0.0, 2012-05-18
+v1.0.0, 2013-05-18
 
 * Fix project name!
 * Non-API classes and functions prepended with underscores to 'hide' them
 
-v0.1.1, 2012-05-12
+v0.1.1, 2013-05-12
 
 * Fix non-enforcement of one-way exits
 
-v0.1.0, 2012-05-12
+v0.1.0, 2013-05-12
 
 * Initial release
