--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,8 @@
 v1.1.0, 2013-06-xx
 
-* Correct release years in CHANGES.txt
+* Correct release years in CHANGES.txt!
+* Extend API to make run_game() fully testable
+* Add API use case documentation with examples
 
 v1.0.1, 2013-05-28
 
