--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,8 +1,8 @@
-v1.1.0, 2013-11-xx
+v1.1.0, 2013-11-08
 
 * Correct release years in CHANGES.txt!
 * Extend API to make run_game() fully testable
-* Add API use case documentation with examples
+* Add API use case example scripts
 
 v1.0.1, 2013-05-28
 
