--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+v1.2.0, 2013-11-xx
+
+* Release into the public domain (replace MIT license with the Unlicense)
+
 v1.1.1, 2013-11-09
 
 * Fix issue #16 (Adding a location exit in a direction with no opposite throws an exception)
