Make consistent use of Sphinx :return: in __init__.py - fix #26

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+v1.2.2, 2013-11-15
+
+* Fix issue #26 (Make consistent use of Sphinx :return: in __init__.py)
+
 v1.2.1, 2013-11-14
 
 * Fix example in README.txt
