--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,8 +1,9 @@
 v1.3.1, 2013-11-xx
 
 * Fix issue #25 (Replace use of 'throws' with 'raises')
+* Fix issue #30 (1.3.0 release date is wrong)
 
-v1.3.0, 2013-11-xx
+v1.3.0, 2013-11-18
 
 * Add support for common directions (issue #28)
 
